--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.4.0",
+    "ts-results": "^3.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
