--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:fix": "yarn lint && yarn format",
     "test": "jest --config ./test/jest.config.json",
     "test:watch": "yarn test --watch",
     "test:cov": "jest --coverage",
